# agentic-webapp-fullstack-alt

./: .gitignore  AGENTS.md  Caddyfile  compose.caddy.yml  compose.override.yml  compose.yml  deployment.md  development.md  package-lock.json  package.json  skills-lock.json
.github/workflows/: deploy-production.yml  deploy-staging.yml  playwright.yml  test-docker-compose.yml
backend/: pyproject.toml
docs/: initial-dev-setup.md  vps-deploy.md  vps-develop.md
docs/superpowers/plans/: 2026-05-30-sveltekit-caddy-template.md
docs/superpowers/specs/: 2026-05-30-template-webapp-fastapi-sveltekit-design.md
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.playwright  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  hooks.server.ts
frontend/src/lib/: auth.ts  utils.ts
frontend/src/lib/api/: client.gen.ts  index.ts  sdk.gen.ts  zod.gen.ts
frontend/src/lib/components/: auth-layout.svelte  footer.svelte  sidebar.svelte
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/admin/: +page.server.ts  +page.svelte
frontend/src/routes/items/: +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/recover-password/: +page.server.ts  +page.svelte
frontend/src/routes/reset-password/: +page.server.ts  +page.svelte
frontend/src/routes/settings/: +page.server.ts  +page.svelte
frontend/src/routes/signup/: +page.server.ts  +page.svelte
frontend/tests/: admin.spec.ts  auth.setup.ts  config.ts  items.spec.ts  login.spec.ts  reset-password.spec.ts  signup.spec.ts  user-settings.spec.ts
frontend/tests/utils/: random.ts
