[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.136.0",
    "python-multipart<1.0.0,>=0.0.29",
    "email-validator<3.0.0.0,>=2.3.0",
    "tenacity<10.0.0,>=9.0.0",
    "pydantic>2.0",
    "emails<2.0,>=1.0",
    "jinja2<4.0.0,>=3.1.6",
    "alembic<2.0.0,>=1.18.0",
    "httpx<1.0.0,>=0.28.0",
    "psycopg[binary]<4.0.0,>=3.3.0",
    "sqlmodel<1.0.0,>=0.0.38",
    "pydantic-settings<3.0.0,>=2.14.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "pyjwt<3.0.0,>=2.13.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest<10.0.0,>=9.0.0",
    "mypy<3.0.0,>=2.0.0",
    "ty>=0.0.40",
    "ruff<1.0.0,>=0.15.0",
    "prek>=0.4.0,<1.0.0",
    "coverage<8.0.0,>=7.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.ty.terminal]
error-on-warning = true
